Got rid of any unused assets, changed my-name to Cutive font

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class='col-sm-4'>
-            <h4>Project by Richard Lanchez</h4>
+            <h4 id="my-name">Project by Richard Lanchez</h4>
           </div>
 
           <div class='col-sm-4'>
