Changed css settings for #submit and added btn-size class to it

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id='input-parent'>
             <!-- Player's guess input, and submit button -->
             <input id='player-input' class="center" placeholder="#" maxlength="3" autofocus=autofocus></input>
-            <button type="button" class="btn btn-primary" id='submit'>Submit</button>
+            <button type="button" class="btn btn-primary btn-lg" id='submit'>Submit</button>
           </div>
 
           <div id='guesses' class=''>
