--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <div id='guesses' class=''>
             <!-- unordered list of guesses -->
-            <ul class="guess-list">
+            <ul id="guess-list">
               <li class="guess">-</li>
               <li class="guess">-</li>
               <li class="guess">-</li>
@@ -65,6 +65,10 @@
 
         </div>
     </div>
-
+    <script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
+    <script src="GuessingGame.js"></script>
   </body>
 </html>
